Add Cooking section with burnt-food toggle, and crushed-gem toggle
Cooking: new section (position 4, before Crafting) holding the existing
"Restrict cooking" toggle (keyName unchanged, so player settings
survive the move out of Resource nodes) plus a new "Require burnt food"
toggle, default off. Burnt cards attach as role "burnt" groups on the
cooking nodes, gated exactly like slayer's superiors.

Only 19 of the 30 cooking rules gain a burnt requirement: the other 11
(trout, salmon, tuna, cod, bass, pike, herring, sardine, anchovies,
mackerel + cavefish) burn into the generic "Burnt fish", which has no
card, so they stay unaffected. Raw beef/bear/rat/ugthanki all share the
one "Burnt meat" card; Raw cave eel -> Burnt cave eel and Raw slimy eel
-> Burnt eel resolve cleanly.

Crafting: new "Require crushed gem" toggle, default off, adding the
Crushed gem card to gem cutting. Only opal, jade and red topaz can
actually shatter (the precious gems never fail once you have the
level), so the flag rides on those 3 of 10 cutting recipes via a
`crushable` field mirroring the existing eventLog precedent.

All card names exact-matched against Card.json. Research and sources in
docs/burnt_and_crushed_report.md.